Fix Vanta canvas visibility: change z-index from -1 to 1

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -148,7 +148,7 @@ body {
   bottom: 0;
   width: 100vw;
   height: 100vh;
-  z-index: -1;
+  z-index: 1;
 }
 .hero-overlay {
   position: relative;
